added Sharon's files

--- a/Mod03_Project.ipynb
+++ b/Mod03_Project.ipynb
@@ -84,8 +84,7 @@
     "        time.sleep(.8)\n",
     "    \n",
     "    \n",
-    "    return games_data\n",
-    "    "
+    "    return games_data"
    ]
   },
   {
